# meson-wraps

./: build.bash
patches/eigen-eigen-b3f3d4950030/: meson.build  upstream.wrap
patches/openblas/: meson.build
patches/xsimd-7.4.4/: meson.build  upstream.wrap
wraps/: clapack.wrap  openblas.wrap  xsimd.wrap
